--- a/gb/24/10/17/n14352098.md
+++ b/gb/24/10/17/n14352098.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大疆涉强迫劳动 美国停止进口部分无人机</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276210-690569-600x400.jpg" />
-<h6>2021年12月15日，大疆无人机于在佛罗里达州迈阿密盘旋。（Joe Raedle/Getty Images）
-</h6>
+<h6>2021年12月15日，大疆无人机于在佛罗里达州迈阿密盘旋。（Joe Raedle/Getty Images）</h6>
 <hr>
 	<p>【大纪元2024年10月17日讯】（大纪元记者陈霆综合报导）中国无人机制造商大疆创新公司（DJI）周三（10月16日）证实，美国政府以涉及强迫劳动为由，停止进口大疆生产的部分无人机。</p>
 <p>上周开始，美国社交媒体和讨论平台Reddit上，开始流传一份似乎是大疆销售管理部门写给分销商的信函<ahref="https://www.suasnews.com/wp-content/uploads/2024/10/Customs-Issue-_-Partner-Letter_FINAL.pdf" target="_blank" rel="noopener">PDF</a>）。</p>
@@ -29,39 +28,33 @@
 <li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316842.md#1" target="_blank" rel="noopener">【菁英论坛】从乌战看未来空军 决定战争胜负</a></span></li>
 </ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/7/n10121258.md#1" target="_blank">郑克中：北大“文革”二三事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/1/n7484186.md#1" target="_blank">湖北女子患舌癌陷入绝境 修大法八天获救</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10379858.md#1" target="_blank">剑平：抗美援朝？时间地点对手名义结果全错</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/22/n3688691.md#1" target="_blank">不再对强盗说“谢谢”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546330.md#1">邪不压正 秦王李世民一身浩气 断李渊迁都之念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549334.md#1">【时事金扫描】乌克兰抓获中共父子间谍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549735.md#1">【直播】川普和夫人赴德州视察 出席圆桌会议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549726.md#1">【马克时空】台湾新列装美制武器亮相汉光演习</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548123.md#1">深圳经济扛不住了 全面失速 公校也欠薪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548386.md#1">分析：内斗升级 中共政治局势力版图大变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548315.md#1">中共公安系人事大变 分析：“王家军”恐内讧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548202.md#1">相声名家杨少华出席活动后去世 家人隐瞒死因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548251.md#1">范冰冰复制《青蛇》经典角色 粉丝反应两极</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542664.md#1">心脏与大脑会记下每一个愤怒的时刻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547428.md#1">素食者补充蛋白质 这10种食物可经常吃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652788.md#1">【直播】参议院听证会：审议军备竞赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651089.md#1">专家：经济不稳 中共政治局会议泄焦虑情绪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/17/n14352098.htm">大疆涉强迫劳动 美国停止进口部分无人机</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352098.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
