--- a/gb/25/9/19/n14598277.md
+++ b/gb/25/9/19/n14598277.md
@@ -1,39 +1,48 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>iPhone 17北京热销 国产手机用户转买蘋果机</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598386-GettyImages-2236258381.jpg" />
-<h6></h6>
-<hr>【大纪元2025年09月19日讯】（大纪元记者李言综合报导）蘋果公司（Apple Inc.）最新一代智能手机iPhone 17系列于周五（9月19日）全球同步开卖，北京市场热度领先。多名原本使用华为、小米等国产品牌的用户排队抢购新机，显示蘋果在中国消费者心中的吸引力不减，部分消费者更视此次为首次转投蘋果阵营的契机。</p><p>根据CNBC报导，北京三里屯蘋果旗舰店于开卖当日凌晨即有人排队。一名刘姓顾客表示自周四晚间11点起等候，只为抢购iPhone 17 Pro Max。他强调，新款配色与散热设计令他相当期待，并坦言自己已从华为用户转为蘋果拥护者。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_2"><div id="DJY_M_article_336x280_2"></div></div></div><p>另一位杨姓顾客则从小米转用蘋果，理由是偏好iPhone的操作系统与整体体验。他认为，今年将有不少中国消费者因蘋果新机功能升级与储存容量扩大，首次选择购买iPhone，成为“果粉”。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_1"><div id="DJY_D_article_300x250_1"></div></div></div><p>除了现场排队盛况，电商数据亦反映热销态势。中国电商平台京东数据显示，iPhone 17系列预售首分钟下单量即超越去年的iPhone 16全日总量；截至周五上午10点，该系列以旧换新下单量更是去年同期四倍。</p><p>在中共打压、中国经济低迷之际，蘋果近年在华市场面临华为、Oppo、小米等品牌竞争，市占下滑。不过自iPhone 15以来，高端机型的强劲表现让外界对其年底销售季保持乐观。</p><p>周五上午，北京三里屯门市外约有300人排队，现场除预购取货者外，亦有黄牛将热门型号加价转售。在上海静安门市，排队时间逾20分钟，且当日各款皆无现货，取货顾客多为Pro系列以上。</p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_3"><div id="DJY_M_article_336x280_3"></div></div></div><p>面对热销，蘋果已要求提高产能。据《The Information》报导，蘋果要求立讯精密（Luxshare Precision）将标准款iPhone 17日产量提高约40%；同时，至少两家供应商接获通知，需将基础款iPhone 17产量提升至少30%。这显示蘋果对中价位产品的需求高于预期。</p><p>本次新机系列共包含三款：iPhone 17 Pro、Pro Max，以及主打超薄设计的iPhone Air，起价自999美元，Pro系列则为1,099美元起。标准款亦纳入以往仅属Pro权限的萤幕与相机升级，进一步拉近与高端机型的差距。</p><div class="hidden lg:block"><div class="m-auto items-center justify-center overflow-hidden print:hidden hidden md:flex" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_D_article_300x250_3"><div id="DJY_D_article_300x250_3"></div></div></div><p>研究机构Omdia经理Le Xuan Chiew指出，iPhone 17基础款在售价维持不变的情况下，储存空间与功能大幅升级，初期表现超出预期，对蘋果年底财报将是一大利多。</p><p>责任编辑：林妍
+<tr><td VALIGN=TOP width="626"><h2 align=center>iPhone 17北京热销 国产手机用户转买苹果机</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598386-GettyImages-2236258381-600x400.jpg" />
+<h6>2025年9月19日，苹果iPhone 17系列全球开卖当日，执行长提姆?库克（Tim Cook）与零售与人力资源资深副总裁迪尔德丽?奥布赖恩（Deirdre O’Brien）现身纽约第五大道旗舰店，与首批顾客自拍合影。新一代手机在中国市场尤受关注，吸引众多果粉排队抢购。（Michael M. Santiago／Getty Images）</h6>
 <hr>
+	<p>【大纪元2025年09月19日讯】（大纪元记者李言综合报导）苹果公司（Apple Inc.）最新一代智能手机iPhone 17系列于周五（9月19日）全球同步开卖，北京市场热度领先。多名原本使用华为、小米等国产品牌的用户排队抢购新机，显示苹果在中国消费者心中的吸引力不减，部分消费者更视此次为首次转投苹果阵营的契机。</p>
+<p>根据CNBC报导，北京三里屯苹果旗舰店于开卖当日凌晨即有人排队。一名刘姓顾客表示自周四晚间11点起等候，只为抢购iPhone 17 Pro Max。他强调，新款配色与散热设计令他相当期待，并坦言自己已从华为用户转为苹果拥护者。</p>
+<p>另一位杨姓顾客则从小米转用苹果，理由是偏好iPhone的操作系统与整体体验。他认为，今年将有不少中国消费者因苹果新机功能升级与储存容量扩大，首次选择购买iPhone，成为“果粉”。</p>
+<p>除了现场排队盛况，电商数据亦反映热销态势。中国电商平台京东数据显示，iPhone 17系列预售首分钟下单量即超越去年的iPhone 16全日总量；截至周五上午10点，该系列以旧换新下单量更是去年同期四倍。</p>
+<p>在中共打压、中国经济低迷之际，苹果近年在华市场面临华为、Oppo、小米等品牌竞争，市占下滑。不过自iPhone 15以来，高端机型的强劲表现让外界对其年底销售季保持乐观。</p>
+<p>周五上午，北京三里屯门市外约有300人排队，现场除预购取货者外，亦有黄牛将热门型号加价转售。在上海静安门市，排队时间逾20分钟，且当日各款皆无现货，取货顾客多为Pro系列以上。</p>
+<p>面对热销，苹果已要求提高产能。据《The Information》报导，苹果要求立讯精密（Luxshare Precision）将标准款iPhone 17日产量提高约40%；同时，至少两家供应商接获通知，需将基础款iPhone 17产量提升至少30%。这显示苹果对中价位产品的需求高于预期。</p>
+<p>本次新机系列共包含三款：iPhone 17 Pro、Pro Max，以及主打超薄设计的iPhone Air，起价自999美元，Pro系列则为1,099美元起。标准款亦纳入以往仅属Pro权限的萤幕与相机升级，进一步拉近与高端机型的差距。</p>
+<p>研究机构Omdia经理Le Xuan Chiew指出，iPhone 17基础款在售价维持不变的情况下，储存空间与功能大幅升级，初期表现超出预期，对苹果年底财报将是一大利多。</p>
+<p>责任编辑：林妍#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574025.md#1">川普与普京会面前 五大焦点值得关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574382.md#1">希拉里：若俄乌终战 提名川普拿诺贝尔和平奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574415.md#1">克里姆林宫：预计双普会晤时长6至7小时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574571.md#1">组图：川普阿拉斯加笑迎普京</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/11/n9947822.md#1" target="_blank">文革中自杀的几个名人（2）文联主席老舍</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10235717.md#1" target="_blank">袁斌：重温“革命烈士”夏明翰的《就义诗》（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/31/n14564212.md#1">【古道人生】才女一首诗竟能改变贫穷丈夫的命运</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573085.md#1">【未解之谜】两千年无人敢挖？揭秘秦始皇的地下王国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/9/n14570620.md#1">【未解之谜】地球七大脉轮终极预言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569067.md#1">亚里斯多德的教育课：培养品格的四门学科</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/4/n4588708.md#1">秉笔直书 为后世法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/4/n13695331.md#1">【器乐独奏与协奏曲】莫扎特降E大调第三号圆号协奏曲，作品第447号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573708.md#1">【纪元焦点】商圈关闭 上海为何如此萧条？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14573945.md#1">【时事金扫描】美俄谈判 川普奇招拿捏普京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572340.md#1">经济学家：史上最大金融泡沫将致市场大崩盘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572367.md#1">美国最具价值的10所私立和公立大学</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572804.md#1">【更新】台风杨柳袭台 14日停班停课一览</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572427.md#1">以赵露思解约风波为例 王晶曝大陆娱乐圈乱象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573139.md#1">《歌手2025》评分仅3.8 创史上最低分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573082.md#1">首度回应隐身两年原因 杨洋受访一度欲言又止</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572439.md#1">港星陈冠希遭Nike起诉 索赔逾12万美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573446.md#1">传贝佐斯想让妻子桑切斯在《007》担任要角</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572017.md#1">电器在不使用时拔掉插头 既省电又降温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572631.md#1">园艺专家经验谈：别再种植这5种树</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572608.md#1">美移民新规收紧婚姻绿卡 华人律师析政策要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573410.md#1">睡太多会增加死亡风险？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/11/n14571685.md#1">睡姿决定健康：睡得好又不酸痛</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/9/19/n14598277.htm">iPhone 17北京热销 国产手机用户转买蘋果机</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/9/19/n14598277.htm">iPhone 17北京热销 国产手机用户转买苹果机</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/9/19/n14598277.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
